@@ -1600,38 +1600,13 @@ public class YarnClusterDescriptor implements ClusterDescriptor<ApplicationId> {
 
 		String javaOpts = "";
 		// Add default gc logging options if enabled
-		boolean enableGCLogging = flinkConfiguration.getBoolean(CoreOptions.FLINK_JVM_DEFAULT_GC_LOGGING);
-		if (enableGCLogging) {
-			String defaultGCOptions =
-				"-Xloggc:" + ApplicationConstants.LOG_DIR_EXPANSION_VAR + "/gc.log " +
-					"-XX:+PrintGCApplicationStoppedTime " +
-					"-XX:+PrintGCDetails " +
-					"-XX:+PrintGCDateStamps " +
-					"-XX:+UseGCLogFileRotation " +
-					"-XX:NumberOfGCLogFiles=10 " +
-					"-XX:GCLogFileSize=10M " +
-					"-XX:+PrintPromotionFailure " +
-					"-XX:+PrintGCCause";
-			javaOpts += defaultGCOptions;
-		}
+		javaOpts += BootstrapTools.getGCLoggingOpts(ApplicationConstants.LOG_DIR_EXPANSION_VAR, flinkConfiguration);
 		// Add default heap dump options if enabled
-		boolean enableHeapDump = flinkConfiguration.getBoolean(CoreOptions.FLINK_JVM_HEAPDUMP_ON_OOM);
-		String heapdumpDir = flinkConfiguration.getString(CoreOptions.FLINK_JVM_HEAPDUMP_DIRECTORY);
-		if (enableHeapDump) {
-			String dumpFileName = "flink-jm-heapdump.hprof";
-			String dumpFileDestPath = new File(heapdumpDir, appId + "-" + dumpFileName).getAbsolutePath();
-			String oomScript = String.format("echo -e 'OutOfMemoryError! Killing current process %%p...\n" +
-					"Check gc logs and heapdump file(%s) for details.' > " +
-					ApplicationConstants.LOG_DIR_EXPANSION_VAR + "/jobmanager.err; " +
-					"kill -9 %%p",
-				dumpFileDestPath);
-			javaOpts += String.format(
-				" -XX:+HeapDumpOnOutOfMemoryError " +
-					"-XX:HeapDumpPath=%s " +
-					"-XX:OnOutOfMemoryError=\"%s\"",
-				dumpFileDestPath,
-				oomScript);
-		}
+		javaOpts += " " + BootstrapTools.getHeapdumpOpts(
+			appId,
+			"jobmanager",
+			ApplicationConstants.LOG_DIR_EXPANSION_VAR,
+			flinkConfiguration);
 		// respect custom JVM options in the YAML file
 		javaOpts += " " + flinkConfiguration.getString(CoreOptions.FLINK_JVM_OPTIONS);
 
